--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Firefox-Marionette
 
+1.27  Sun May 08 21:38 2022
+       Fixing missing META information
+
 1.26  Sun May 01 06:31 2022
        Adding support for about:config prefs.js dynamic changes
 
