--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Firefox-Marionette
 
+1.28  Mon Jun 13 11:54 2022
+       Adding ./setup-for-firefox-marionette-build.sh to remove the snap firefox for Ubuntu 22.04 TLS.
+
 1.27  Sun May 08 21:38 2022
        Fixing missing META information
 
