--- a/README
+++ b/README
@@ -1542,7 +1542,11 @@ SUBROUTINES/METHODS
       * debug - should firefox's debug to be available via STDERR. This
       defaults to "0". Any ssh connections will also be printed to STDERR.
       This defaults to "0" (off). This setting may be updated by the debug
-      method.
+      method. If this option is not a boolean (0|1), the value will be
+      passed to the MOZ_LOG
+      <https://firefox-source-docs.mozilla.org/networking/http/logging.html>
+      option on the command line of the firefox binary to allow extra
+      levels of debug.
 
       * developer - only allow a developer edition
       <https://www.mozilla.org/en-US/firefox/developer/> to be launched.
@@ -1682,7 +1686,7 @@ SUBROUTINES/METHODS
         use Firefox::Marionette();
     
         my $remote_darwin_firefox = Firefox::Marionette->new(
-                         debug => 1,
+                         debug => 'timestamp,nsHttp:1',
                          host => '10.1.2.3',
                          trust => '/path/to/root_ca.pem',
                          binary => '/Applications/Firefox.app/Contents/MacOS/firefox'
