Adding percentage_visible method

--- a/README
+++ b/README
@@ -1837,6 +1837,38 @@ SUBROUTINES/METHODS
                 ...
         }
 
+ percentage_visible
+
+    accepts an element as the first parameter and returns the percentage of
+    that element that is currently visible in the viewport
+    <https://developer.mozilla.org/en-US/docs/Glossary/Viewport>. It
+    achieves this by determining the co-ordinates of the DOMRect
+    <https://developer.mozilla.org/en-US/docs/Web/API/DOMRect> with a
+    getBoundingClientRect
+    <https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect>
+    call and then using elementsFromPoint
+    <https://developer.mozilla.org/en-US/docs/Web/API/Document/elementsFromPoint>
+    and getComputedStyle
+    <https://developer.mozilla.org/en-US/docs/Web/API/Window/getComputedStyle>
+    calls to determine how the percentage of the DOMRect that is visible to
+    the user.
+
+        use Firefox::Marionette();
+        use Encode();
+        use v5.10;
+    
+        my $firefox = Firefox::Marionette->new( visible => 1, kiosk => 1 )->go('http://metacpan.org');;
+        my $element = $firefox->find_id('metacpan_search-input');
+        my $totally_viewable_percentage = $firefox->percentage_visible($element); # search box is slightly hidden by different effects
+        foreach my $display ($firefox->displays()) {
+            if ($firefox->resize($display->width(), $display->height())) {
+                if ($firefox->percentage_visible($element) < $totally_viewable_percentage) {
+                   say 'Search box stops being viewable with ' . Encode::encode('UTF-8', $display->usage());
+                   last;
+                }
+            }
+        }
+
  perform
 
     accepts a list of actions (see mouse_up, mouse_down, mouse_move, pause,
