--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Firefox-Marionette
 
+1.34  Fri Dec 30 12:52 2022
+       Adding percentage_visible, displays and resize methods
+       Documentation and test suite fixes
+
 1.33  Sun Nov 27 21:38 2022
        Improving cross platform support
        Forcing no agent forwarding for ssh
