--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Firefox-Marionette
 
+1.35  Sat Jan 21 21:04 2023
+       Documentation and test suite fixes
+
 1.34  Fri Dec 30 12:52 2022
        Adding percentage_visible, displays and resize methods
        Documentation and test suite fixes
