--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Firefox-Marionette
 
+1.37  Sun Apr 30 19:12 2023
+       Another test suite fix
+
 1.36  Sun Apr 30 15:59 2023
        Fixes to cope with Firefox 112 capabilities changes.  Thanks to toreau
        Documentation and test suite fixes
