Adding cache_keys, check_cache_key and clear_cache methods

--- a/README
+++ b/README
@@ -299,6 +299,21 @@ SUBROUTINES/METHODS
     
         $firefox->bye(sub { $firefox->find_name('metacpan_search-input') })->await(sub { $firefox->interactive() && $firefox->find_partial('Download') })->click();
 
+ cache_keys
+
+    returns the set of all cache keys from Firefox::Marionette::Cache.
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new();
+        foreach my $key_name ($firefox->cache_keys()) {
+          my $key_value = $firefox->check_cache_key($key_name);
+          if (Firefox::Marionette::Cache->$key_name() != $key_value) {
+            warn "This module this the value of $key_name is " . Firefox::Marionette::Cache->$key_name();
+            warn "Firefox thinks the value of   $key_name is $key_value";
+          }
+        }
+
  capabilities
 
     returns the capabilities of the current firefox binary. You can
@@ -341,6 +356,26 @@ SUBROUTINES/METHODS
         }
 
     This method returns itself to aid in chaining methods.
+
+ check_cache_key
+
+    accepts a cache_key as a parameter.
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new();
+        foreach my $key_name ($firefox->cache_keys()) {
+          my $key_value = $firefox->check_cache_key($key_name);
+          if (Firefox::Marionette::Cache->$key_name() != $key_value) {
+            warn "This module this the value of $key_name is " . Firefox::Marionette::Cache->$key_name();
+            warn "Firefox thinks the value of   $key_name is $key_value";
+          }
+        }
+
+    This method returns the cache_key's actual value from firefox as a
+    number. This may differ from the current value of the key from
+    Firefox::Marionette::Cache as these values have changed as firefox has
+    evolved.
 
  child_error
 
@@ -385,6 +420,23 @@ SUBROUTINES/METHODS
 
     accepts a element as the first parameter and clears any user supplied
     input
+
+ clear_cache
+
+    accepts a single flag parameter, which can be an ORed set of keys from
+    Firefox::Marionette::Cache and clears the appropriate sections of the
+    cache. If no flags parameter is supplied, the default is CLEAR_ALL.
+    Note that this method, unlike delete_cookies will actually delete all
+    cookies for all hosts, not just the current webpage.
+
+        use Firefox::Marionette();
+        use Firefox::Marionette::Cache qw(:all);
+    
+        my $firefox = Firefox::Marionette->new()->go('https://do.lots.of.evil/')->clear_cache(); # default clear all
+    
+        $firefox->go('https://cookies.r.us')->clear_cache(CLEAR_COOKIES());
+
+    This method returns itself to aid in chaining methods.
 
  clear_pref
 
@@ -534,8 +586,9 @@ SUBROUTINES/METHODS
 
  delete_cookies
 
-    here be cookie monsters! This method returns itself to aid in chaining
-    methods.
+    Here be cookie monsters! Note that this method will only delete cookies
+    for the current site. See clear_cache for an alternative. This method
+    returns itself to aid in chaining methods.
 
  delete_header
 
