Adding console logging documentation

--- a/README
+++ b/README
@@ -1628,7 +1628,8 @@ SUBROUTINES/METHODS
 
       * console - show the browser console
       <https://developer.mozilla.org/en-US/docs/Tools/Browser_Console/>
-      when the browser is launched. This defaults to "0" (off).
+      when the browser is launched. This defaults to "0" (off). See CONSOLE
+      LOGGING for a discussion of how to send log messages to the console.
 
       * debug - should firefox's debug to be available via STDERR. This
       defaults to "0". Any ssh connections will also be printed to STDERR.
@@ -2617,6 +2618,26 @@ AUTOMATING THE FIREFOX PASSWORD MANAGER
         $firefox->go('https://pause.perl.org/pause/authenquery')->accept_alert(); # this goes to the page and submits the http auth popup
     
         $firefox->go('https://github.com/login')->fill_login(); # fill the login and password fields without needing to see them
+
+CONSOLE LOGGING
+
+    Sending debug to the console can be quite confusing in firefox, as some
+    techniques won't work in chrome context. The following example can be
+    quite useful.
+
+        use Firefox::Marionette();
+    
+        my $firefox = Firefox::Marionette->new( visible => 1, devtools => 1, console => 1, devtools => 1 );
+    
+        $firefox->script( q[console.log("This goes to devtools b/c it's being generated in content mode")]);
+    
+        $firefox->chrome()->script( q[console.log("Can't be seen b/c it's in chrome mode")]);
+    
+        $firefox->chrome()->script( q[const { console } = ChromeUtils.import("resource://gre/modules/Console.jsm"); console.log("Find me in the browser console in chrome mode")]);
+    
+        # This won't work b/c of permissions
+        #
+        # $firefox->content()->script( q[const { console } = ChromeUtils.import("resource://gre/modules/Console.jsm"); console.log("Find me in the browser console in content mode")]);
 
 REMOTE AUTOMATION OF FIREFOX VIA SSH
 
